Changed External Linkage for all sections from Github links to links to nf-core site

--- a/site/bioinformatics-services/epigenomics.html
+++ b/site/bioinformatics-services/epigenomics.html
@@ -16,8 +16,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/methylseq" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/methylseq" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
 
@@ -30,8 +29,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/chipseq" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/chipseq" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
                     </div>
@@ -46,8 +44,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/atacseq" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/atacseq" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
 
@@ -59,8 +56,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/hic" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/hic" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
                     </div>
