--- a/site/bioinformatics-services/genomics.html
+++ b/site/bioinformatics-services/genomics.html
@@ -17,8 +17,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/sarek" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/sarek" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
 
@@ -30,8 +29,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/nanoseq" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/nanoseq" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
                     </div>
@@ -45,8 +43,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/bacass" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re//bacass" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
 
@@ -59,8 +56,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/eager" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/eager" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
                     </div>
