--- a/site/bioinformatics-services/immunoinformatics.html
+++ b/site/bioinformatics-services/immunoinformatics.html
@@ -15,8 +15,7 @@
 
                             <div>&nbsp;</div>
                             <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                href="https://github.com/nf-core/hlatyping" role="button" target="_blank">More
-                                Information</a>
+                                href="https://nf-co.re/hlatyping" role="button" target="_blank">More Information</a>
                         </div>
                     </div>
 
@@ -30,7 +29,7 @@
 
                             <div>&nbsp;</div>
                             <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                href="https://github.com/nf-core/epitopeprediction" role="button" target="_blank">More
+                                href="https://nf-co.re/epitopeprediction" role="button" target="_blank">More
                                 Information</a>
                         </div>
                     </div>
@@ -44,8 +43,7 @@
 
                             <div>&nbsp;</div>
                             <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                href="https://github.com/nf-core/bcellmagic" role="button" target="_blank">More
-                                Information</a>
+                                href="https://nf-co.re/bcellmagic" role="button" target="_blank">More Information</a>
                         </div>
                     </div>
                 </div>
