--- a/site/bioinformatics-services/metagenomics.html
+++ b/site/bioinformatics-services/metagenomics.html
@@ -15,8 +15,7 @@
 
                             <div>&nbsp;</div>
                             <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                href="https://github.com/nf-core/ampliseq" role="button" target="_blank">More
-                                Information</a>
+                                href="https://nf-co.re/ampliseq" role="button" target="_blank">More Information</a>
                         </div>
                     </div>
 
@@ -28,7 +27,7 @@
 
                             <div>&nbsp;</div>
                             <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                href="https://github.com/nf-core/mag" role="button" target="_blank">More Information</a>
+                                href="https://nf-co.re/mag" role="button" target="_blank">More Information</a>
                         </div>
                     </div>
                 </div>
