--- a/site/bioinformatics-services/proteomics.html
+++ b/site/bioinformatics-services/proteomics.html
@@ -16,8 +16,7 @@
 
                             <div>&nbsp;</div>
                             <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                href="https://github.com/nf-core/mhcquant" role="button" target="_blank">More
-                                Information</a>
+                                href="https://nf-co.re/mhcquant" role="button" target="_blank">More Information</a>
                         </div>
                     </div>
 
@@ -30,8 +29,7 @@
 
                             <div>&nbsp;</div>
                             <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                href="https://github.com/nf-core/proteomicslfq" role="button" target="_blank">More
-                                Information</a>
+                                href="https://nf-co.re/proteomicslfq" role="button" target="_blank">More Information</a>
                         </div>
                     </div>
                 </div>
