--- a/site/bioinformatics-services/transcriptomics.html
+++ b/site/bioinformatics-services/transcriptomics.html
@@ -17,8 +17,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/rnaseq" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/rnaseq" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
 
@@ -30,8 +29,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/scrnaseq" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/scrnaseq" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
                     </div>
@@ -45,8 +43,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/rnafusion" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/rnafusion" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
 
@@ -58,8 +55,7 @@
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/smrnaseq" role="button" target="_blank">More
-                                    Information</a>
+                                    href="https://nf-co.re/smrnaseq" role="button" target="_blank">More Information</a>
                             </div>
                         </div>
                     </div>
