Removed redundant  "high-quality" from introduction text

--- a/site/bioinformatics-services/bioinformatics-services.html
+++ b/site/bioinformatics-services/bioinformatics-services.html
@@ -5,7 +5,7 @@
                 <div class="section-title">
                     <div class="bs4-h1 bs4-text-center">Bioinformatics Services</div>
 
-                    <p class="bs4-h3 bs4-text-center bs4-mt-5">We employ only high-quality curated <a
+                    <p class="bs4-h3 bs4-text-center bs4-mt-5">We employ only curated <a
                             href="https://nf-co.re/" target="_blank"><img alt="nf-core" class="img-in-text"
                                 src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38751/nf-core-logo.png/215c974a-39dd-4bbb-bd11-439c97797090?t=1585832017000" /></a>
                         pipelines</p>
