Add Beckman Biomek i5 and i7 to sample preparation system

--- a/site/sequencing-solutions/instruments.html
+++ b/site/sequencing-solutions/instruments.html
@@ -31,6 +31,8 @@
                         <li class="bs4-list-group-item">Tecan Fluent 780</li>
                         <li class="bs4-list-group-item">MGISP-100</li>
                         <li class="bs4-list-group-item">10x Genomics</li>
+                        <li class="bs4-list-group-item">Beckman Biomek i5</li>
+                        <li class="bs4-list-group-item">Beckman Biomek i7</li>
                     </ul>
                 </div>
             </div>
