Add One Liners HTML Content and adaptions

--- a/ncct/site/sequencing-solutions/methods.html
+++ b/ncct/site/sequencing-solutions/methods.html
@@ -6,63 +6,57 @@
                     <div class="bs4-h1 bs4-text-center">Sequencing Methods</div>
                 </div>
 
-                <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
-                    <div class="bs4-row bs4-mb-4 bs4-justify-content-center bs4-w-100">
-                        <div class="bs4-card bs4-border-0">
-                            <div
-                                class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
-                                Variant Detection
-                            </div>
+                <div class="bs4-card-columns four-columns">
+                    <div class="bs4-card bs4-border-0">
+                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
+                            Variant Detection
+                        </div>
 
-                            <ul class="bs4-list-group bs4-text-left">
-                                <li class="bs4-list-group-item">Whole Genome sequencing</li>
-                                <li class="bs4-list-group-item">Long-Read sequencing</li>
-                                <li class="bs4-list-group-item">Panel sequencing</li>
-                                <li class="bs4-list-group-item">Exome sequencing</li>
-                                <li class="bs4-list-group-item">Targeted RNA sequencing</li>
-                            </ul>
-                    </div>
-
-                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
-                            <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">
-                                Expression Analysis
-                            </div>
-
-                            <ul class="bs4-list-group bs4-text-left">
-                                <li class="bs4-list-group-item">mRNA sequencing</li>
-                                <li class="bs4-list-group-item">Total RNA sequencing</li>
-                                <li class="bs4-list-group-item">3'-Sequencing</li>
-                                <li class="bs4-list-group-item">scRNA sequencing</li>
-                                <li class="bs4-list-group-item">miRNA sequencing</li>
-                                <li class="bs4-list-group-item">smallRNA sequencing</li>
-                                <li class="bs4-list-group-item">long-Read RNA sequencing</li>
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">Whole Genome sequencing</li>
+                            <li class="bs4-list-group-item">Long-Read sequencing</li>
+                            <li class="bs4-list-group-item">Panel sequencing</li>
+                            <li class="bs4-list-group-item">Exome sequencing</li>
+                            <li class="bs4-list-group-item">Targeted RNA sequencing</li>
                         </ul>
                     </div>
 
-                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
-                            <div
-                                class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
-                                Metagenomics
-                            </div>
-
-                            <ul class="bs4-list-group bs4-text-left">
-                                <li class="bs4-list-group-item">Shotgun Metagenomics</li>
-                                <li class="bs4-list-group-item">16S/Amplicon Sequencing</li>
-                                <li class="bs4-list-group-item">Metatranscriptomics</li>
-                            </ul>
+                    <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                        <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">
+                            Expression Analysis
                         </div>
 
-                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
-                            <div
-                                class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
-                                Epigenomics
-                            </div>
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">mRNA sequencing</li>
+                            <li class="bs4-list-group-item">Total RNA sequencing</li>
+                            <li class="bs4-list-group-item">3'-Sequencing</li>
+                            <li class="bs4-list-group-item">scRNA sequencing</li>
+                            <li class="bs4-list-group-item">miRNA sequencing</li>
+                            <li class="bs4-list-group-item">smallRNA sequencing</li>
+                            <li class="bs4-list-group-item">long-Read RNA sequencing</li>
+                        </ul>
+                    </div>
 
-                            <ul class="bs4-list-group bs4-text-left">
-                                <li class="bs4-list-group-item">Whole genome bisulfite sequencing
-                                </li>
-                            </ul>
+                    <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
+                            Metagenomics
                         </div>
+
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">Shotgun Metagenomics</li>
+                            <li class="bs4-list-group-item">16S/Amplicon Sequencing</li>
+                            <li class="bs4-list-group-item">Metatranscriptomics</li>
+                        </ul>
+                    </div>
+
+                    <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
+                            Epigenomics
+                        </div>
+
+                        <ul class="bs4-list-group bs4-text-left">
+                            <li class="bs4-list-group-item">Whole genome bisulfite sequencing</li>
+                        </ul>
                     </div>
                 </div>
             </div>
