--- a/ncct/site/sequencing-solutions/instruments.html
+++ b/ncct/site/sequencing-solutions/instruments.html
@@ -1,11 +1,11 @@
 <section id="instruments">
     <div class="bs4-container">
-        <div class="section-title">
-            <div class="bs4-h1 bs4-text-center">All major technologies under one roof!</div>
-        </div>
-
         <div class="bs4-row bs4-justify-content-center">
             <div class="bs4-col-10 bs4-offset-1">
+                <div class="section-title">
+                    <div class="bs4-h1 bs4-text-center">All major technologies under one roof!</div>
+                </div>
+
                 <div class="bs4-card-columns two-columns">
                     <div class="bs4-card">
                         <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
@@ -23,8 +23,8 @@
                     </div>
 
                     <div class="bs4-card">
-                        <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Sample Preparation
-                            Systems
+                        <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
+                            Sample Preparation Systems
                         </div>
 
                         <ul class="bs4-list-group bs4-text-center">
