--- a/ncct/site/sequencing-solutions/instruments.html
+++ b/ncct/site/sequencing-solutions/instruments.html
@@ -6,35 +6,84 @@
                     <div class="bs4-h1 bs4-text-center">All major technologies under one roof!</div>
                 </div>
 
-                <div class="bs4-card-columns two-columns">
-                    <div class="bs4-card">
-                        <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
-                            Sequencers
+                <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
+                    <div class="bs4-row bs4-mb-4 bs4-justify-content-center bs4-w-100">
+                        <div class="bs4-card bs4-border-0 b min-vw-auto bs4-w-100">
+                            <div
+                                class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
+                                Sequencers
+                            </div>
+
+                            <ul class="bs4-list-group bs4-text-center">
+                                <li class="bs4-list-group-item">Illumina NextSeq500<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="flexible mid-output sequencer"/></li>
+                                <li class="bs4-list-group-item">Illumina MiSeq<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="low-output sequencer"/></li>
+                                <li class="bs4-list-group-item">Illumina NovaSeq6000<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="production scale instrument"/></li>
+                                <li class="bs4-list-group-item">ONT MinION<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="low throughput long read sequencer"/></li>
+                                <li class="bs4-list-group-item">ONT PromethION<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="high throughput long-read sequencer
+"/></li>
+                                <li class="bs4-list-group-item">PacBio Sequel II<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="accurate long-read sequencer"/></li>
+                            </ul>
                         </div>
 
-                        <ul class="bs4-list-group bs4-text-center">
-                            <li class="bs4-list-group-item">NextSeq500</li>
-                            <li class="bs4-list-group-item">MiSeq</li>
-                            <li class="bs4-list-group-item">NovaSeq6000</li>
-                            <li class="bs4-list-group-item">Nanopore MinION</li>
-                            <li class="bs4-list-group-item">Nanopore PromethION</li>
-                            <li class="bs4-list-group-item">PacBio Sequel II</li>
-                        </ul>
-                    </div>
+                        <div class="bs4-card">
+                            <div
+                                class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
+                                Sample Preparation Systems
+                            </div>
 
-                    <div class="bs4-card">
-                        <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
-                            Sample Preparation Systems
+                            <ul class="bs4-list-group bs4-text-center">
+                                <li class="bs4-list-group-item">Qiagen QIAcube<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="high throughput isolation"/></li>
+                                <li class="bs4-list-group-item">Agilent Bravo<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="production scale liquid handler"/></li>
+                                <li class="bs4-list-group-item">Qiagen QIASymphony<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="high throughput isolation"/></li>
+                                <li class="bs4-list-group-item">Tecan Fluent 780<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="high throughput liquid handler"/></li>
+                                <li class="bs4-list-group-item">MGISP-100<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="mid throughput liquid handler"/></li>
+                                <li class="bs4-list-group-item">10x Genomics<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="single cell emulsion preparation"/></li>
+                                <li class="bs4-list-group-item">Beckman Biomek i5<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title="high throughput liquid handler"/></li>
+                                <li class="bs4-list-group-item">Beckman Biomek i7<img
+                                    class="ncct-information-icon"
+                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    title=" high throughput liquid handler"/></li>
+                            </ul>
                         </div>
-
-                        <ul class="bs4-list-group bs4-text-center">
-                            <li class="bs4-list-group-item">QIAcube</li>
-                            <li class="bs4-list-group-item">Agilent Bravo</li>
-                            <li class="bs4-list-group-item">QIASymphony</li>
-                            <li class="bs4-list-group-item">Tecan Fluent 780</li>
-                            <li class="bs4-list-group-item">MGISP-100</li>
-                            <li class="bs4-list-group-item">10x Genomics</li>
-                        </ul>
                     </div>
                 </div>
             </div>
