--- a/ncct/site/sequencing-solutions/methods.html
+++ b/ncct/site/sequencing-solutions/methods.html
@@ -13,11 +13,31 @@
                         </div>
 
                         <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Whole Genome sequencing</li>
-                            <li class="bs4-list-group-item">Long-Read sequencing</li>
-                            <li class="bs4-list-group-item">Panel sequencing</li>
-                            <li class="bs4-list-group-item">Exome sequencing</li>
-                            <li class="bs4-list-group-item">Targeted RNA sequencing</li>
+                            <li class="bs4-list-group-item">Whole Genome sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of the whole genome of an organism, including coding and non-coding regions"/>
+                            </li>
+                            <li class="bs4-list-group-item">Long-Read sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of long inserts of DNA allowing better mapping and phasing of the genome"/>
+                            </li>
+                            <li class="bs4-list-group-item">Panel sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="In depth sequencing of a particular set of DNA regions using panels"/>
+                            </li>
+                            <li class="bs4-list-group-item">Exome sequencing<img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of all protein coding regions of the genome of an organism"/>
+                            </li>
+                            <li class="bs4-list-group-item">Targeted RNA sequencing<img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of a subset of transcripts enabling both qualitative and quantitative expression analysis"/>
+                            </li>
                         </ul>
                     </div>
 
@@ -27,13 +47,41 @@
                         </div>
 
                         <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">mRNA sequencing</li>
-                            <li class="bs4-list-group-item">Total RNA sequencing</li>
-                            <li class="bs4-list-group-item">3'-Sequencing</li>
-                            <li class="bs4-list-group-item">scRNA sequencing</li>
-                            <li class="bs4-list-group-item">miRNA sequencing</li>
-                            <li class="bs4-list-group-item">smallRNA sequencing</li>
-                            <li class="bs4-list-group-item">long-Read RNA sequencing</li>
+                            <li class="bs4-list-group-item">mRNA sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of all messenger RNA transcripts which provides information on the whole coding transcriptome of an organism"/>
+                            </li>
+                            <li class="bs4-list-group-item">Total RNA sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of all types of RNAs present, including diverse small and non-coding RNAs"/>
+                            </li>
+                            <li class="bs4-list-group-item">3'-Sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of transcripts 3’ UTR allowing gene expression analysis with high sensitivity and in degraded sample"/>
+                            </li>
+                            <li class="bs4-list-group-item">scRNA sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing the RNA of individual cells to capture cell heterogeneity"/>
+                            </li>
+                            <li class="bs4-list-group-item">miRNA sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of micro RNAs which confer gene silencing and are often associated with various cellular mechanisms"/>
+                            </li>
+                            <li class="bs4-list-group-item">smallRNA sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of small RNAs (including micro RNA) which exert diverse functions of gene regulation"/>
+                            </li>
+                            <li class="bs4-list-group-item"><span>long-Read RNA sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of full-length RNA allowing precise isoform detection"/></span>
+                            </li>
                         </ul>
                     </div>
 
@@ -43,9 +91,21 @@
                         </div>
 
                         <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Shotgun Metagenomics</li>
-                            <li class="bs4-list-group-item">16S/Amplicon Sequencing</li>
-                            <li class="bs4-list-group-item">Metatranscriptomics</li>
+                            <li class="bs4-list-group-item">Shotgun Metagenomics <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of all genomic information of a sample containing DNA of a community of organisms"/>
+                            </li>
+                            <li class="bs4-list-group-item">16S/Amplicon Sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of the 16S rRNA coding region to identify different taxa in a sample containing DNA of diverse organisms"/>
+                            </li>
+                            <li class="bs4-list-group-item">Metatranscriptomics <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Sequencing of the RNA in a heterogenous sample to analyse gene expression in a community of organisms"/>
+                            </li>
                         </ul>
                     </div>
 
@@ -55,7 +115,11 @@
                         </div>
 
                         <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Whole genome bisulfite sequencing</li>
+                            <li class="bs4-list-group-item">Whole genome bisulfite sequencing <img
+                                class="ncct-information-icon"
+                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                title="Investigation of the methylation pattern in the whole genome of an organism"/>
+                            </li>
                         </ul>
                     </div>
                 </div>
